// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatCleanupChanges should format a single closed PR 1`] = `
"Found 1 closed PR:

**test-app** (dev)
- PR [#123](https://github.com/owner/repo/pull/123): Add new feature (closed Jan 15, 2024)"
`;

exports[`formatCleanupChanges should format multiple closed PRs under same app and environment 1`] = `
"Found 2 closed PRs:

**test-app** (dev)
- PR [#123](https://github.com/owner/repo/pull/123): First PR (closed Jan 15, 2024)
- PR [#456](https://github.com/owner/repo/pull/456): Second PR (closed Jan 18, 2024)"
`;

exports[`formatCleanupChanges should format single closed PR 1`] = `
"Found 1 closed PR:

**test-app** (dev)
- PR [#123](https://github.com/owner/repo/pull/123): Add new feature (closed Jan 15, 2024)"
`;

exports[`formatCleanupChanges should handle multiple PRs across different apps and environments 1`] = `
"Found 3 closed PRs:

**test-app** (dev)
- PR [#123](https://github.com/owner/repo/pull/123): Dev PR 1 (closed Jan 15, 2024)
- PR [#789](https://github.com/owner/repo/pull/789): Dev PR 2 (closed Jan 20, 2024)

**test-app** (staging)
- PR [#456](https://github.com/owner/repo/pull/456): Staging PR (closed Jan 18, 2024)"
`;

exports[`formatCleanupChanges should separate same app with different environments 1`] = `
"Found 2 closed PRs:

**test-app** (dev)
- PR [#123](https://github.com/owner/repo/pull/123): Dev PR (closed Jan 15, 2024)

**test-app** (staging)
- PR [#456](https://github.com/owner/repo/pull/456): Staging PR (closed Jan 18, 2024)"
`;

exports[`formatCleanupChanges should sort sections alphabetically by app name then environment 1`] = `
"Found 3 closed PRs:

**test-api** (dev)
- PR [#456](https://github.com/owner/repo/pull/456): API PR (closed Jan 18, 2024)

**test-app** (dev)
- PR [#789](https://github.com/owner/repo/pull/789): App Dev PR (closed Jan 20, 2024)

**test-app** (staging)
- PR [#123](https://github.com/owner/repo/pull/123): Router PR (closed Jan 15, 2024)"
`;
